fix page overflow

--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ p {
 }
 
 .wrappercontent {
-    margin-left: 30%;
+    margin-left: 31%;
     border-color: black;
     border-radius: 5px;
     margin-top: 28px;
